Try to fix IOS scroll visiblity

--- a/CrossfitDiary/CoreApp/CrossfitDiaryCore.Web/ClientApp/style/persons.scss
+++ b/CrossfitDiary/CoreApp/CrossfitDiaryCore.Web/ClientApp/style/persons.scss
@@ -155,6 +155,7 @@
 }
 
 .workout-display-container {
-    max-height: 205px;
-    overflow-y: auto;
+    max-height: 214px;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
 }
